feat: implement Universal Data Unifier service
- Add PostgreSQL adapter for user data with unified JSON transformation
- Add MySQL adapter for order data with customer aggregation
- Implement Kafka integration with unified-customers topic
- Create Universal Consumer Adapter with REST API
- Add data unification service with scheduled synchronization
- Provide customer statistics and search endpoints

Architecture:
- PostgreSQL → users table (name, email, registration_date)
- MySQL → orders table (order_id, user_id, amount, status)
- Kafka → unified-customers topic for consistent data format
- Adapters hide database-specific schemas and APIs from clients
- Single REST API with unified response structure